# jaime

./: .gitignore  .instructions.md  LICENSE  README.md  render.yaml
backend/: README.md  admin.py  agent.py  ai.py  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  webhook.py  whatsapp.py
backend/tests/: conftest.py  test_admin.py  test_agent.py  test_ai.py  test_auth.py  test_database.py  test_main.py  test_routes.py  test_webhook.py  test_whatsapp.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  Dashboard.js  Login.js  index.css
