[tool.poetry]
name = "whatsapp-assistant-backend"
version = "0.1.0"
description = "Backend de FastAPI para bot de WhatsApp con IA y dashboard"
authors = ["Ricardo A <fma.7r5@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.138.1"
uvicorn = {extras = ["standard"], version = "^0.49.0"}
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
sqlmodel = "^0.0.39"
passlib = "^1.7.4"
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
python-multipart = "^0.0.32"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.28"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=backend --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
